Set version to 0.1.3.0, add unit test for music soundbank

--- a/SoundbankEditorTests/SoundbankEditorTests.csproj
+++ b/SoundbankEditorTests/SoundbankEditorTests.csproj
@@ -48,6 +48,9 @@
     <None Update="Resources\TW Attila\event_data.dat">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Resources\TW Attila\global_music_det.bnk">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
